--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.4.1"
+  },
+  "scripts": {
+    "start": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
   }
 }
